diplomat/dotnet/src/Picky/Raw.cs

// Automatically generated by Diplomat

#pragma warning disable 0105
using System;
using System.Collections;
using System.Collections.Generic;
using System.Runtime.InteropServices;
using Devolutions.Picky.Diplomat;
#pragma warning restore 0105

namespace Devolutions.Picky.Raw;


[StructLayout(LayoutKind.Sequential)]
public unsafe class PickyError
{
    public const string NativeLib = "picky";

    private IntPtr _inner;

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "PickyError_display", ExactSpelling = true)]
    public static extern void display(PickyError self, DiplomatWriteable writeable);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "PickyError_print", ExactSpelling = true)]
    public static extern void print(PickyError self);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "PickyError_destroy", ExactSpelling = true)]
    public static extern void destroy(PickyError self);
}

[StructLayout(LayoutKind.Sequential)]
public unsafe class PickyPem
{
    public const string NativeLib = "picky";

    private IntPtr _inner;

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "PickyPem_load_from_file", ExactSpelling = true)]
    public static extern pem_ffi_ResultBoxPickyPemBoxPickyError load_from_file(sbyte* path_data, nuint path_len);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "PickyPem_parse", ExactSpelling = true)]
    public static extern pem_ffi_ResultBoxPickyPemBoxPickyError parse(sbyte* input_data, nuint input_len);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "PickyPem_create", ExactSpelling = true)]
    public static extern pem_ffi_ResultBoxPickyPemBoxPickyError create(sbyte* label_data, nuint label_len, byte* data_data, nuint data_len);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "PickyPem_label", ExactSpelling = true)]
    public static extern pem_ffi_ResultVoidBoxPickyError label(PickyPem self, DiplomatWriteable writeable);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "PickyPem_print_label", ExactSpelling = true)]
    public static extern void print_label(PickyPem self);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "PickyPem_destroy", ExactSpelling = true)]
    public static extern void destroy(PickyPem self);
}

[StructLayout(LayoutKind.Sequential)]
public struct pem_ffi_ResultBoxPickyPemBoxPickyError {
    [StructLayout(LayoutKind.Explicit)]
    public struct InnerUnion
    {
        [FieldOffset(0)]
        public PickyPem ok;
        [FieldOffset(0)]
        public PickyError err;
    }

    public InnerUnion inner;
    public bool isOk;

    public PickyPem Ok
    {
        get
        {
            return inner.ok;
        }
    }

    public PickyError Err
    {
        get
        {
            return inner.err;
        }
    }
}

[StructLayout(LayoutKind.Sequential)]
public struct pem_ffi_ResultVoidBoxPickyError {
    [StructLayout(LayoutKind.Explicit)]
    public struct InnerUnion
    {
        [FieldOffset(0)]
        public PickyError err;
    }

    public InnerUnion inner;
    public bool isOk;

    public PickyError Err
    {
        get
        {
            return inner.err;
        }
    }
}
